# niftyTDMS

./: LICENSE.txt  setup.cfg
src/niftytdms/: __init__.py  niftytdms.py  niftytdms_dev.py
src/niftytdms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/niftytdsm/: __init__.py  niftytdsm.py
src/niftytdsm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Test_Log-20240806_165430.tdms
