[metadata]
name = niftytdms
version = 0.0.6
author = Charles Goodman
author_email = ...
description = Python package to read .tdms files
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/cgoodman-eng/niftyTDMS/
project_urls =
    Bug Tracker = https://github.com/cgoodman-eng/niftyTDMS/issues/
    repository = https://github.com/cgoodman-eng/niftyTDMS/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src